src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Banner_Advisor_PROV_Email__c</fullName>
        <description>SGRADVR_ADVR_CODE = PROV email address</description>
        <label>Banner Advisor - PROV Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Banner_Advisor_PROV__c</fullName>
        <description>SGRADVR_ADVR_CODE = PROV</description>
        <inlineHelpText>Banner Advisor where Advisor Code = PROV</inlineHelpText>
        <label>Banner Advisor - PROV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Advisor_Text__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <inlineHelpText>Banner Advisor where is marked as primary.</inlineHelpText>
        <label>Banner Primary Advisor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Citizenship__c</fullName>
        <description>International vs Domestic, based on Visa code</description>
        <inlineHelpText>International vs Domestic, based on Visa code</inlineHelpText>
        <label>Banner Citizenship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Ethnicity_Code__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Ethnicity Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banner Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Holds_Detail__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Holds Detail</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banner_ID__c</fullName>
        <externalId>true</externalId>
        <label>Banner ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Banner_Major_Code_1__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Major Code 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Major_Code_2__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Major Code 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Minor_Code__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Minor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Preferred_Email__c</fullName>
        <description>Preferred Email Address from Banner.</description>
        <label>Banner Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Banner_Religion_Code__c</fullName>
        <description>Fields feed over from Banner to assist with Student Retention.</description>
        <label>Banner Religion Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Student_Level__c</fullName>
        <description>The Banner Student Level field.</description>
        <label>Banner Student Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Type__c</fullName>
        <description>Pulls over the Banner Type calculated field, for example, Employee, Student, Alum.</description>
        <label>Banner Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Month_Day__c</fullName>
        <inlineHelpText>From Grad RFI form - requests Birth Month/Day MM/DD</inlineHelpText>
        <label>Birth Month/Day</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blended_Online_Teaching_Experience__c</fullName>
        <label>Blended/Online Teaching Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CBSA_Code__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Division_Code__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Division Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Division_Level__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Division Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Division_Title__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Division Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Level__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Title__c</fullName>
        <description>Core-Based Statistical Areas data initially provided by Melissa Data</description>
        <label>CBSA Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignIDText__c</fullName>
        <label>CampaignIDText</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Mail__c</fullName>
        <description>The field is loaded from Banner.  The field help with Student Retention.</description>
        <label>Campus Mail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Interests__c</fullName>
        <description>Career Interests</description>
        <label>Career Interests</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Inquiry Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen</fullName>
                </value>
                <value>
                    <fullName>U.S. Dual Citizen</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Asylee/Refugee</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_of_Birth__c</fullName>
        <label>City of Birth</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Description of the student classification.  This field helps with student retention.</description>
        <label>Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Undergraduate Cohort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_App_ID__c</fullName>
        <externalId>true</externalId>
        <label>Common App ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Employer__c</fullName>
        <inlineHelpText>From Inquiry</inlineHelpText>
        <label>Company/Employer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The confidentiality field is used by the retention team.</description>
        <inlineHelpText>If the field is populated, it indicates the student requested confidentiality.</inlineHelpText>
        <label>Confidentiality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_preference__c</fullName>
        <label>Contact preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Preference_Form_Complete_Date__c</fullName>
        <description>Banner SARCHKL_ACTIVITY_DATE</description>
        <inlineHelpText>Banner SARCHKL_ACTIVITY_DATE</inlineHelpText>
        <label>Course Preference Form Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Preference_Form_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Coming from Banner, where SARCHKL_ADMR_CODE = HPRF</description>
        <inlineHelpText>SARCHKL_ADMR_CODE = HPRF</inlineHelpText>
        <label>Course Preference Form Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits_Earned__c</fullName>
        <description>Credits Earned displayed from Banner</description>
        <label>Credits Earned</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Professor_1_Email__c</fullName>
        <description>Email of most recent professor 1</description>
        <label>Current Professor 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Professor_2_Email__c</fullName>
        <label>Current Professor 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Professor_3_Email__c</fullName>
        <label>Current Professor 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Professor_Email_10__c</fullName>
        <label>Current Professor Email 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Professor_Email_11__c</fullName>
        <label>Current Professor Email 11</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Professor_Email_12__c</fullName>
        <label>Current Professor Email 12</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_US_Visa_Type__c</fullName>
        <description>For non-US citizens - need values from Common App</description>
        <label>Current US Visa Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I do not hold a currently valid U.S. non-immigrant Visa</fullName>
                </value>
                <value>
                    <fullName>A-1 Foreign Diplomatic Personnel</fullName>
                </value>
                <value>
                    <fullName>A-2  Dependent Foreign Diplomatic Personnel</fullName>
                </value>
                <value>
                    <fullName>A-3 Employee of Foreign Gov Office</fullName>
                </value>
                <value>
                    <fullName>B-2  Tourist</fullName>
                </value>
                <value>
                    <fullName>E-2  Dependent of Treaty Investor</fullName>
                </value>
                <value>
                    <fullName>F-1  Student</fullName>
                </value>
                <value>
                    <fullName>F-2  Dependent of F-1 Student</fullName>
                </value>
                <value>
                    <fullName>G-1  Representative of Intl. Org.</fullName>
                </value>
                <value>
                    <fullName>G-2  Dependent of Representative of Intl. Org.</fullName>
                </value>
                <value>
                    <fullName>G-3  Dependent of Representative of Intl. Org.</fullName>
                </value>
                <value>
                    <fullName>G-4  Dependent of Representative of Intl. Org.</fullName>
                </value>
                <value>
                    <fullName>H-4  Dependent of H Visa Holder</fullName>
                </value>
                <value>
                    <fullName>J-1  Exchange Visitor</fullName>
                </value>
                <value>
                    <fullName>J-2  Dependent of J-1 Visa Holder</fullName>
                </value>
                <value>
                    <fullName>L-2  Dependent of L-1 Visa Holder</fullName>
                </value>
                <value>
                    <fullName>R-2  Dependent of R-1 Visa Holder</fullName>
                </value>
                <value>
                    <fullName>Other Visa Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DFC_Cohort__c</fullName>
        <label>DFC Cohort</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFC_Current_Alert_Status__c</fullName>
        <formula>IF (DFC_Probation_Date__c &gt; TODAY(),&quot;On Alert&quot;,&quot;Not Currently on Alert&quot;)</formula>
        <label>DFC Current Alert Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFC_Current_Status__c</fullName>
        <label>DFC Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DFC_Meeting_Frequency__c</fullName>
        <formula>If (Probation_Code__c = &quot;P1&quot;, 2, 1)</formula>
        <label>DFC Meeting Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFC_Mentoring_Meeting_Frequency__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DFC Mentoring Meeting Frequency</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFC_Mentoring_Meetings_this_Month__c</fullName>
        <label>DFC Mentoring Meetings this Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFC_Primary_Influencer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DFC Primary Influencer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFC_Probation_Date__c</fullName>
        <inlineHelpText>This value is the max of alerts for this contact.  If the day is in the past, the contact is no longer on alert.</inlineHelpText>
        <label>DFC Alert Date</label>
        <summarizedField>DFC_Mentoring__c.Probation_Period__c</summarizedField>
        <summaryFilterItems>
            <field>DFC_Mentoring__c.Mentoring_Type__c</field>
            <operation>equals</operation>
            <value>Alert</value>
        </summaryFilterItems>
        <summaryForeignKey>DFC_Mentoring__c.Student__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_FY_Advisor_Group_Mtg_Attend__c</fullName>
        <description>Date FY Advisory Group Meeting Attended</description>
        <label>Date FY Advisor Group Mtg Attend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FY_Advisor_Group_Mtg_Not_Attended__c</fullName>
        <description>Date that the student attended the First Year Group Advisor Mtg</description>
        <label>Date FY Advisor Group Mtg Not Attended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FY_Advisor_Individual_Mtg_Attend__c</fullName>
        <description>Date student attended individual advisor meeting</description>
        <label>Date FY Advisor Individual Mtg Attend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Code__c</fullName>
        <label>Decision Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Description__c</fullName>
        <label>Decision Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Sought_Program_Catalog_Name__c</fullName>
        <formula>Degree_Sought_Program_Catalog__r.Name</formula>
        <label>Degree Sought Program Catalog Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Sought_Program_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inquiry field</description>
        <inlineHelpText>Inquiry field</inlineHelpText>
        <label>Degree Sought (Program Catalog)</label>
        <referenceTo>EnrollmentrxRx__Program_Catalog__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Affiliation_STAFF_ONLY__c</fullName>
        <description>STELAR field</description>
        <label>Department Affiliation (STAFF ONLY)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_from_St_Thomas_Miles__c</fullName>
        <description>Distance from St. Thomas using latitude and longitude data points</description>
        <formula>DISTANCE(MailingAddress,GEOLOCATION(44.9437701,-93.1934074), &apos;mi&apos;)</formula>
        <inlineHelpText>Distance from St. Thomas using latitude and longitude data points</inlineHelpText>
        <label>Distance from St. Thomas (Miles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Admit_Reason__c</fullName>
        <description>The student should never be accepted to St. Thomas.  The field should be visible and editable to only those with admissions committee access.</description>
        <label>Do Not Admit Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Admit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The student should never be accepted to St. Thomas.  The field should be visible and editable to only those with admissions committee access.</description>
        <label>Do Not Admit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFC__c</fullName>
        <label>EFC</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERx_Events__How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>HS Visit</fullName>
                </value>
                <value>
                    <fullName>College Fair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact_First_Name__c</fullName>
        <label>Emergency Contact First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Last_Name__c</fullName>
        <label>Emergency Contact Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Phone__c</fullName>
        <label>Emergency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Relationship__c</fullName>
        <label>Emergency Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aunt/Uncle</fullName>
                </value>
                <value>
                    <fullName>Brother/Sister</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Nephew/Niece</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Placement_Score__c</fullName>
        <inlineHelpText>Max value from Banner</inlineHelpText>
        <label>English Placement Score</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Active_Enrollment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hidden auto-populated field with a lookup to the current active EO for this contact. Used by the Contact Status field.</description>
        <inlineHelpText>Hidden auto-populated field with a lookup to the current active EO for this contact. Used by the Contact Status field.</inlineHelpText>
        <label>Active Application Record</label>
        <referenceTo>EnrollmentrxRx__Enrollment_Opportunity__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Anticipated_Term_Start_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>DEPRECATED -- DO NOT USE THIS FIELD</inlineHelpText>
        <label>Anticipated Term</label>
        <referenceTo>EnrollmentrxRx__Term__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Contact_Status__c</fullName>
        <description>Auto-populated field showing the term and admissions status of the current active Enrollment Opportunity for this Contact.</description>
        <formula>if(EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Term_Intended_to_Start__r.Name &amp; &quot;: &quot; &amp; EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Admissions_Status_Text__c = &quot;: &quot;, &quot;&quot;, EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Term_Intended_to_Start__r.Name &amp; &quot;: &quot; &amp; EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Admissions_Status_Text__c)</formula>
        <inlineHelpText>Auto-populated field showing the term and admissions status of the current active Enrollment Opportunity for this Contact.</inlineHelpText>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Facebook_Email_Address__c</fullName>
        <description>A Facebook-proxied email address to allow email to be sent to the user via Facebook.</description>
        <inlineHelpText>A Facebook-proxied email address to allow email to be sent to the user via Facebook.</inlineHelpText>
        <label>Facebook Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Facebook_ID__c</fullName>
        <description>ERx Field</description>
        <label>Facebook ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Facebook_Log__c</fullName>
        <description>Shows all activity from the Facebook app.</description>
        <inlineHelpText>Shows all activity from the Facebook app.</inlineHelpText>
        <label>Facebook Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Has_EO_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</description>
        <inlineHelpText>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</inlineHelpText>
        <label>Has EO Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__High_School_Code__c</fullName>
        <externalId>true</externalId>
        <label>High School Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__High_School_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School Employer</label>
        <referenceTo>EnrollmentrxRx__High_School__c</referenceTo>
        <relationshipLabel>High School Employees</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School Name</label>
        <referenceTo>EnrollmentrxRx__High_School__c</referenceTo>
        <relationshipLabel>High School Students</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>HS Visit</fullName>
                </value>
                <value>
                    <fullName>College Fair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__IM_Account_Name__c</fullName>
        <label>IM Account Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Program_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program of Interest</label>
        <referenceTo>EnrollmentrxRx__Program_Offered__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__SIS_ID__c</fullName>
        <description>ERx Field</description>
        <label>SIS ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Secondary_Email__c</fullName>
        <description>ERx Field</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnrollmentrxRx__Status_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Modified Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>